--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -101,6 +101,8 @@
     "# for g-colab a cloned repo under MyDrive is assumed : /\n",
     "if os.getcwd() == \"/content\": src_path =  \"/content/drive/MyDrive/aug24_bds_int---co2/src\"\n",
     "if src_path not in sys.path: sys.path.append(src_path)\n",
+    "# Path to the neighboring 'data' folder in the local repository\n",
+    "data_path = os.path.abspath(os.path.join(os.getcwd(), '..', 'data'))\n",
     "\n",
     "# Import utils library with custom functions\n",
     "from utils_CO2 import *"
@@ -138,53 +140,6 @@
    "source": [
     "from google.colab import drive\n",
     "drive.mount('/content/drive')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "GcfwmoCA26yd"
-   },
-   "source": [
-    "# 0. Additional functions in between: Load, Save, Inspect - DFs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "Vr-JpPQc26ye"
-   },
-   "outputs": [],
-   "source": [
-    "# Path to the neighboring 'data' folder in the local repository\n",
-    "data_path = os.path.abspath(os.path.join(os.getcwd(), '..', 'data'))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "G26s_diV26yg"
-   },
-   "source": [
-    "0.C Define inspeciton function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "AseHXK3126yj",
-    "outputId": "c0300615-1914-4574-b777-af012ec6f12f"
-   },
-   "outputs": [],
-   "source": [
-    "# The beginning of each section\n",
-    "# Loading the data frame\n",
-    "# Inspect the data frame\n",
-    "df = load_data_local('EU_all_current_shared_Okt_23.parquet', data_path)\n",
-    "\n",
-    "inspect_data(df)"
    ]
   },
   {
@@ -533,7 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optimize dtypes"
+    "## Optimize datatypes"
    ]
   },
   {
