cleaning DataPipeline and functions in utils_CO2

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -7624,6 +7624,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# If thre is any IT employed (any IT value present), fill na of Erwltp and Ewltp\n",
     "#df = handle_nans_IT_related_columns(df, ['IT_1', 'IT_2', 'IT_3', 'IT_4', 'IT_5'], target_columns = ['Erwltp (g/km)', 'Ernedc (g/km)'] , strategy='mean')"
    ]
   },
