--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Data Preprocessing Summary\n",
     "\n",
-    "The purpose of this notebook is to process and prepare data from the original EEA source for modeling. This involves making decisions regarding the handling of missing values, outliers, and the exclusion of specific columns, rows and categories. The considerations behind the decisions are explained in Report3_Final_Nov8.pdf.\n",
+    "The purpose of this notebook is to process and prepare data from the original EEA source for modeling. This involves making decisions regarding the handling of missing values, outliers, and the exclusion of specific columns, rows and categories. The considerations behind the decisions are explained in Report3_CO2.pdf.\n",
     "\n",
     "Data Source: [European Environment Agency (EEA)](https://www.eea.europa.eu/en/datahub/datahubitem-view/fa8b1229-3db6-495d-b18e-9c9b3267c02b)\n",
     "\n",
