new dataset plus adjustment DataPipeLine_ALL to new path

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -7932,7 +7932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8071,11 +8071,11 @@
     "            df = drop_duplicates(df, drop=drop_dupes, subset=None, preserve_weights=preserve_weights)\n",
     "            \n",
     "            # Outlier Handling (second run: because of row removal outlier calculation may have changed). no outlier handling on 'Area (m2)'\n",
-    "            #df = replace_outliers_with_median(df, columns=gaussian_cols, IQR_distance_multiplier=3.0, apply_outlier_removal=True)\n",
-    "            #df = iqr_outlier_removal(df, columns=non_gaussian_cols, IQR_distance_multiplier=3.0, apply_outlier_removal=True)\n",
-    "            df = replace_outliers_with_median_weighted(df, columns=gaussian_cols, IQR_distance_multiplier=3.0, apply_outlier_removal=True, \n",
+    "            #df = replace_outliers_with_median(df, columns=gaussian_cols, IQR_distance_multiplier=IQR_outlier_multiplier, apply_outlier_removal=True)\n",
+    "            #df = iqr_outlier_removal(df, columns=non_gaussian_cols, IQR_distance_multiplier=IQR_outlier_multiplier, apply_outlier_removal=True)\n",
+    "            df = replace_outliers_with_median_weighted(df, columns=gaussian_cols, IQR_distance_multiplier=IQR_outlier_multiplier, apply_outlier_removal=True, \n",
     "                        use_weighted_quartiles=True, weight_column='frequency')\n",
-    "            df = iqr_outlier_removal_weighted(df, columns=non_gaussian_cols, IQR_distance_multiplier=3.0, apply_outlier_removal=True, \n",
+    "            df = iqr_outlier_removal_weighted(df, columns=non_gaussian_cols, IQR_distance_multiplier=IQR_outlier_multiplier, apply_outlier_removal=True, \n",
     "                        use_weighted_quartiles=True, weight_column='frequency')\n",
     "            \n",
     "            # Calculate new attribute 'Area (m2)' and remove 'W (mm)' and 'At2 (mm)'\n",
@@ -8102,7 +8102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -8127,20 +8127,20 @@
       "Columns now present in the DataFrame: ['Mh', 'Ct', 'Mt', 'Ewltp (g/km)', 'W (mm)', 'At1 (mm)', 'At2 (mm)', 'Ft', 'Fm', 'ec (cm3)', 'ep (KW)', '#identical occurences', 'IT_1', 'IT_2', 'IT_3', 'IT_4', 'IT_5']\n",
       "\n",
       "===  Replacing outliers in Gaussian columns with median  ===\n",
-      "Replaced 3131 outliers in column 'Mt' with median value 1500.0.\n",
-      "Replaced 143449 outliers in column 'W (mm)' with median value 2624.0.\n",
-      "Replaced 2519 outliers in column 'At1 (mm)' with median value 1545.0.\n",
-      "Replaced 1403 outliers in column 'At2 (mm)' with median value 1542.0.\n",
+      "Replaced 65 outliers in column 'Mt' with median value 1500.0.\n",
+      "Replaced 10190 outliers in column 'W (mm)' with median value 2624.0.\n",
+      "Replaced 36 outliers in column 'At1 (mm)' with median value 1545.0.\n",
+      "Replaced 117 outliers in column 'At2 (mm)' with median value 1542.0.\n",
       "DataFrame shape after replacing outliers in Gaussian columns: (4674587, 17)\n",
       "\n",
       "===  Removing outliers from non-Gaussian columns  ===\n",
-      "Capped 0 outliers in column 'ec (cm3)' between 1.4706560373306274 and 1.4964877367019653.\n",
-      "Capped 0 outliers in column 'ep (KW)' between 1.4451904296875 and 1.6627321243286133.\n",
-      "Capped 151522 outliers in column 'Ewltp (g/km)' between 33.0 and 243.0.\n",
+      "Capped 0 outliers in column 'ec (cm3)' between 1.4632755517959595 and 1.5038682222366333.\n",
+      "Capped 0 outliers in column 'ep (KW)' between 1.383035659790039 and 1.7248868942260742.\n",
+      "Capped 17205 outliers in column 'Ewltp (g/km)' between -27.0 and 303.0.\n",
       "DataFrame shape after capping outliers in non-Gaussian columns: (4674587, 17)\n",
       "\n",
       "=========================================================\n",
-      "====== Processing file minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers3_0_NoW_runagain_tn20_mcp00.10.parquet ======\n",
+      "====== Processing file minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers5_0_NoW_tn20_mcp00.10.parquet ======\n",
       "===========================================================\n",
       "Categories to keep after applying thresholds: ['VOLKSWAGEN', 'BMW AG', 'MERCEDES-BENZ AG', 'AUDI AG', 'SKODA', 'FORD WERKE GMBH', 'SEAT', 'RENAULT', 'PSA', 'OPEL AUTOMOBILE', 'AUTOMOBILES PEUGEOT', 'VOLVO', 'PORSCHE', 'JAGUAR LAND ROVER LIMITED', 'FIAT GROUP', 'AUTOMOBILES CITROEN', 'AA-IVA', 'STELLANTIS EUROPE', 'TOYOTA', 'DACIA']\n",
       "Replaced 200589 values in 'Mh' with 'Other' where not in specified categories or occur less than 0.1% of total rows.\n",
@@ -8242,28 +8242,28 @@
       "Total frequency after drops: 19029436\n",
       "Total frequencies are consistent before and after dropping duplicates.\n",
       "Initial row count: 3731632\n",
-      "Final row count: 2000450\n",
-      "Number of duplicates dropped: 1731182\n",
+      "Final row count: 2029696\n",
+      "Number of duplicates dropped: 1701936\n",
       "=======================\n",
       "\n",
       "\n",
       "===  Replacing outliers in Gaussian columns with median  ===\n",
-      "Replaced 0 outliers in column 'Mt' with median value 1501.0.\n",
-      "Replaced 0 outliers in column 'W (mm)' with median value 2624.0.\n",
+      "Replaced 0 outliers in column 'Mt' with median value 1502.0.\n",
+      "Replaced 0 outliers in column 'W (mm)' with median value 2628.0.\n",
       "Replaced 0 outliers in column 'At1 (mm)' with median value 1545.0.\n",
-      "Replaced 8 outliers in column 'At2 (mm)' with median value 1545.0.\n",
-      "DataFrame shape after replacing outliers in Gaussian columns: (2000450, 57)\n",
+      "Replaced 0 outliers in column 'At2 (mm)' with median value 1545.0.\n",
+      "DataFrame shape after replacing outliers in Gaussian columns: (2029696, 57)\n",
       "\n",
       "===  Removing outliers from non-Gaussian columns  ===\n",
-      "Capped 0 outliers in column 'ec (cm3)' between 1.4707142114639282 and 1.4964441061019897.\n",
-      "Capped 0 outliers in column 'ep (KW)' between 1.458200454711914 and 1.6529746055603027.\n",
-      "Capped 14 outliers in column 'Ewltp (g/km)' between 40.0 and 243.0.\n",
-      "DataFrame shape after capping outliers in non-Gaussian columns: (2000450, 57)\n",
+      "Capped 0 outliers in column 'ec (cm3)' between 1.4633628129959106 and 1.5037955045700073.\n",
+      "Capped 0 outliers in column 'ep (KW)' between 1.4025506973266602 and 1.7086243629455566.\n",
+      "Capped 5655 outliers in column 'Ewltp (g/km)' between -18.0 and 301.0.\n",
+      "DataFrame shape after capping outliers in non-Gaussian columns: (2029696, 57)\n",
       "Calculated attribute 'Area (m2)' as W * (At1+At2)/2) / 1000000.\n",
       "Removed columns 'W (mm)' and 'At2 (mm)' (collinearity with At1 and Area)\n",
       "=======================\n",
       "\n",
-      "Filename 'minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers3_0_NoW_runagain_tn20_mcp00.10.parquet' already exists. Skipping.\n",
+      "Filename 'minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers5_0_NoW_tn20_mcp00.10.parquet' already exists. Skipping.\n",
       "No new filenames to add.\n"
      ]
     }
@@ -8299,9 +8299,9 @@
     "# Outlier Handling (first run): replace with median for gaussian, drop for non-gaussian numerical attributes\n",
     "#df = replace_outliers_with_median(df, columns=gaussian_cols, IQR_distance_multiplier=3.0, apply_outlier_removal=True)\n",
     "#df = iqr_outlier_removal(df, columns=non_gaussian_cols, IQR_distance_multiplier=3.0, apply_outlier_removal=True)\n",
-    "df = replace_outliers_with_median_weighted(df, columns=gaussian_cols, IQR_distance_multiplier=3.0, apply_outlier_removal=True, \n",
+    "df = replace_outliers_with_median_weighted(df, columns=gaussian_cols, IQR_distance_multiplier=5.0, apply_outlier_removal=True, \n",
     "                        use_weighted_quartiles=True, weight_column='#identical occurences')\n",
-    "df = iqr_outlier_removal_weighted(df, columns=non_gaussian_cols, IQR_distance_multiplier=3.0, apply_outlier_removal=True, \n",
+    "df = iqr_outlier_removal_weighted(df, columns=non_gaussian_cols, IQR_distance_multiplier=5.0, apply_outlier_removal=True, \n",
     "                        use_weighted_quartiles=True, weight_column='#identical occurences')\n",
     "            \n",
     "\n",
@@ -8310,10 +8310,10 @@
     "##################################################################################################################################\n",
     "        \n",
     "df, filename_list = process_datasets(df = df,\n",
-    "                                 prefix_processed_filename = 'minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers3_0_NoW',\n",
+    "                                 prefix_processed_filename = 'minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers5_0_NoW',\n",
     "                                 top_n_list=[20],\n",
     "                                 min_cat_percent_list=[0.1],\n",
-    "                                 IQR_outlier_multiplier = 3.0,\n",
+    "                                 IQR_outlier_multiplier = 5.0,\n",
     "                                 drop_first_category_at_encoding=True,\n",
     "                                 drop_dupes=True,\n",
     "                                 preserve_weights=True,\n",
