--- a/notebooks/Modelpipeline.ipynb
+++ b/notebooks/Modelpipeline.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Depured modeling part"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "AZsUlcUmP3CC"
@@ -1218,7 +1227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
